feat: refactoring to remove unused objects (dataset/elections)