@@ -4,39 +4,22 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.google.inject.Inject;
 import jakarta.ws.rs.NotFoundException;
 import java.sql.Timestamp;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import org.broadinstitute.consent.http.db.DarCollectionDAO;
 import org.broadinstitute.consent.http.db.DataAccessRequestDAO;
 import org.broadinstitute.consent.http.db.DatasetDAO;
-import org.broadinstitute.consent.http.db.ElectionDAO;
-import org.broadinstitute.consent.http.models.DarCollection;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
 import org.broadinstitute.consent.http.models.Dataset;
 import org.broadinstitute.consent.http.models.DatasetMetrics;
-import org.broadinstitute.consent.http.models.Election;
 
 public class MetricsService {
 
   private final DatasetDAO dataSetDAO;
   private final DataAccessRequestDAO darDAO;
-  private final DarCollectionDAO darCollectionDAO;
-  private final ElectionDAO electionDAO;
 
   @Inject
-  public MetricsService(
-      DatasetDAO dataSetDAO,
-      DataAccessRequestDAO darDAO,
-      DarCollectionDAO darCollectionDAO,
-      ElectionDAO electionDAO) {
+  public MetricsService(DatasetDAO dataSetDAO, DataAccessRequestDAO darDAO) {
     this.dataSetDAO = dataSetDAO;
     this.darDAO = darDAO;
-    this.darCollectionDAO = darCollectionDAO;
-    this.electionDAO = electionDAO;
   }
 
   public static class DarMetricsSummary {
@@ -47,12 +30,12 @@ public class MetricsService {
     @JsonProperty final String nonTechRus;
     @JsonProperty final String referenceId;
 
-    public DarMetricsSummary(DataAccessRequest dar, String darCode) {
-      if (dar != null && dar.data != null) {
+    public DarMetricsSummary(DataAccessRequest dar) {
+      if (dar != null && dar.getData() != null) {
         this.updateDate = dar.getUpdateDate();
-        this.projectTitle = dar.data.getProjectTitle();
-        this.darCode = darCode;
-        this.nonTechRus = dar.data.getNonTechRus();
+        this.projectTitle = dar.getData().getProjectTitle();
+        this.darCode = dar.getDarCode();
+        this.nonTechRus = dar.getData().getNonTechRus();
         this.referenceId = dar.getReferenceId();
       } else {
         this.updateDate = null;
@@ -78,38 +61,9 @@ public class MetricsService {
     // can be converted to jsonb in query
     // convert all dars into smaller objects that only contain the information needed
     List<DataAccessRequest> dars = darDAO.findApprovedDARsByDatasetId(datasetId);
-    List<Integer> darCollectionIds = dars.stream().map(DataAccessRequest::getCollectionId).toList();
-    List<DarCollection> darCollections =
-        darCollectionIds.isEmpty()
-            ? List.of()
-            : darCollectionDAO.findDARCollectionByCollectionIds(darCollectionIds);
-    Map<Integer, DarCollection> collectionMap =
-        darCollections.stream()
-            .collect(Collectors.toMap(DarCollection::getDarCollectionId, Function.identity()));
-
-    List<DarMetricsSummary> darInfo =
-        dars.stream()
-            .map(
-                dar -> {
-                  DarCollection collection = collectionMap.get(dar.getCollectionId());
-                  String darCode = Objects.nonNull(collection) ? collection.getDarCode() : null;
-                  return new DarMetricsSummary(dar, darCode);
-                })
-            .collect(Collectors.toList());
-
-    // if there are associated dars, find associated access elections so we know how many and which
-    // dars are approved/denied
-    List<String> referenceIds =
-        dars.stream().map(dar -> (dar.referenceId)).collect(Collectors.toList());
-    if (!referenceIds.isEmpty()) {
-      List<Election> elections =
-          electionDAO.findLastElectionsByReferenceIdsAndType(referenceIds, "DataAccess");
-      metrics.setElections(elections);
-    } else {
-      metrics.setElections(Collections.emptyList());
-    }
-    metrics.setDataset(dataset);
-    metrics.setDars(darInfo);
+    List<DarMetricsSummary> darMetricsSummaries =
+        dars.stream().map(DarMetricsSummary::new).toList();
+    metrics.setDars(darMetricsSummaries);
     return metrics;
   }
 }
